--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<div class="jumbotron center-y">
   <h1>Olá, seja bem vindo !</h1>
   <p>Para continuar, efetue o login usando sua conta do spotify!</p>
   <p>
